# CryptoAPI

./: .gitignore  .todo  README.md  pyproject.toml
cryptoapi/integrations/coinapi/: client.py
cryptoapi/integrations/sanapi/: client.py
tests/: conftests.py
tests/integrations/coinapi/: test_client_all_current_rates.py  test_client_specific_rate.py
tests/integrations/sanapi/: test_client.py
