[tool.poetry]
name = "cryptoapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
ujson = "^5.8.0"


[tool.poetry.group.test.dependencies]
ipdb = "^0.13.13"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
